--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.13",
     "@mui/x-data-grid": "^6.19.1",
     "@mui/x-data-grid-generator": "^6.19.1",
+    "date-fns": "^3.3.1",
     "firebase": "^10.7.2",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-moment": "^1.1.3",
-    "react-router-dom": "^6.21.3",
+    "react-router-dom": "^6.22.0",
     "react-virtuoso": "^4.6.2",
     "styled-components": "^6.1.8"
   },
