--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "firebase": "^10.7.2",
     "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-awesome-button": "^7.0.5",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-moment": "^1.1.3",
@@ -37,6 +38,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "sass": "^1.71.1",
     "vite": "^5.0.8"
   }
 }
