--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.13",
     "@mui/x-data-grid": "^6.19.1",
     "@mui/x-data-grid-generator": "^6.19.1",
+    "animate.css": "^4.1.1",
     "date-fns": "^3.3.1",
     "firebase": "^10.7.2",
     "moment": "^2.30.1",
@@ -28,6 +29,7 @@
     "react-moment": "^1.1.3",
     "react-router-dom": "^6.22.0",
     "react-virtuoso": "^4.6.2",
+    "reactive-button": "^1.3.15",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
