--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.13",
     "@mui/x-data-grid": "^6.19.1",
     "@mui/x-data-grid-generator": "^6.19.1",
+    "@rcaferati/wac": "^1.0.0",
     "animate.css": "^4.1.1",
     "date-fns": "^3.3.1",
     "firebase": "^10.7.2",
