--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-awesome-button": "^7.0.5",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
+    "react-helmet": "^6.1.0",
     "react-moment": "^1.1.3",
     "react-router-dom": "^6.22.0",
     "react-spinners": "^0.13.8",
