--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "date-fns": "^3.3.1",
     "firebase": "^10.7.2",
     "moment": "^2.30.1",
+    "numeral": "^2.0.6",
     "react": "^18.2.0",
     "react-awesome-button": "^7.0.5",
     "react-dom": "^18.2.0",
