--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.15.6",
     "@mui/material": "^5.15.6",
     "@mui/styled-engine-sc": "^6.0.0-alpha.13",
+    "@mui/system": "^5.15.12",
     "@mui/x-data-grid": "^6.19.1",
     "@mui/x-data-grid-generator": "^6.19.1",
     "@rcaferati/wac": "^1.0.0",
